<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/axis_text"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textColor="@color/minute_yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/open"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/highest"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvHighest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/lowest"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvLowest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/close"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:id="@+id/tvUpDownAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:id="@+id/tvUpDownRatio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/tradeAmount"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvTradeAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/up_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/holdAmount"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvHoldAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/chart_bg" />

    <TextView
        android:id="@+id/tvDiffAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="3dp"
        android:textColor="@color/chart_bg" />
</LinearLayout>